# MADE

./: .gitignore  airports.sqlite  country-stats.sqlite  gtfs.sqlite  international_students_north_america.db  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.toml  temperatures.sqlite  trees.sqlite
.github/workflows/: ci.yml
examples/: data-exploration-example.ipynb
exercises/: exercise1.jv  exercise2.jv  exercise3.jv  exercise4.jv  exercise5.jv
old/: pipeline copy.py
project/:  project-plan.md  data-exploration.ipynb  international_students_north_america.db  pipeline.py  tests.sh
project/ETL/: __init__.py  extract.py  load.py  transform.py
project/config/: config.py
project/tests/: test_pipeline.py
tests/: project_tests.ipynb
